--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
-        :root {
+.sideR{
+        right: 0%;
+}
+.sideL{
+        left: 0%;
+}
+:root {
           --bg-color: rgb(20, 20, 20);
           --card-color: rgb(23, 23, 23);
      }
